@@ -130,44 +130,28 @@ I recommend doing this; for instructions, see
 <hr>
 The following distributions are known to include or package <i>runit</i>:
 <ul>
-<li><a href="http://packages.qa.debian.org/runit">
+<li><a href="https://tracker.debian.org/pkg/runit">
 Debian GNU/Linux</a> (as alternative init scheme)
-<li><a href="http://www.freshports.org/sysutils/runit/">
+<li><a href="https://www.freshports.org/sysutils/runit/">
 FreeBSD</a>
-<li><a href="http://www.openbsd.org/cgi-bin/cvsweb/ports/sysutils/runit/">
+<li><a href="https://cvsweb.openbsd.org/ports/sysutils/runit/">
 OpenBSD</a>
-<li><a href="http://pkgsrc.se/wip/runit/">
+<li><a href="https://pkgsrc.se/sysutils/runit">
 NetBSD</a>
-<li><a href="http://packages.ubuntu.com/runit">
+<li><a href="https://packages.ubuntu.com/search?keywords=runit">
 Ubuntu</a> (as alternative init scheme)
-<li><a href="http://packages.gentoo.org/package/sys-process/runit">
+<li><a href="https://packages.gentoo.org/packages/sys-process/runit">
 Gentoo</a>
 <li><a href="https://code.google.com/p/runit-for-lfs/">
 Linux from Scratch</a>
-<li><a href="http://www.finnix.org/">
-Finnix</a>
-<li><a href="http://www.smeserver.org/">
-SME server</a>
-<li><a href="http://linux-vserver.org/Running_runit-supervised_services_inside_a_vserver">
-Linux-VServer</a>
-<li><a href="http://www.t2-project.org/">
+<li><a href="https://t2linux.com/packages/runit">
 T2</a>
-<li><a href="http://www.gobolinux.org/">
-GoboLinux</a>
-<li><a href="http://www.dragora.org/">
-Dragora GNU/Linux</a> (as default init scheme)
-<li><a href="https://wiki.archlinux.org/index.php/Runit">
+<li><a href="https://wiki.archlinux.org/title/Runit">
 ArchLinux</a>
-<li><a href="http://www.opensde.org/">
-OpenSDE</a>
-<li><a href="http://zinux.cynicbytrade.com/">
-Zinux Linux</a> (as default init scheme)
-<li><a href="http://deepofix.org/">
-deepOfix Mail Server</a> (as default init scheme)
 <li><a href="https://www.voidlinux.org/">
 Void Linux</a> (as default init scheme)
 <li><a href="https://artixlinux.org/">
-Artix Linux</a> (as default init scheme)
+Artix Linux</a> (as alternative init scheme)
 <li><a href="https://antixlinux.com/">
 antiX Linux</a> (as alternative init scheme)
 </ul>
